# cnft-telegram-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: bot.py
src/tbot/: model.py  utils.py
