[tool.poetry]
name = "cnft-telegram-bot"
version = "0.1.0"
description = ""
authors = ["jianshen92 <jianshen92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
pydantic = "^1.8.2"
python-telegram-bot = "^13.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
